--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>enrico</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <p>Hello world</p>
