--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<title>enrico</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-<p>Hello world</p>
+<p>I <i class="fa fa-heart"></i> YOU</p>
 </body>
 </html>
