--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>enrico</title>
+	<title>Enrico</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-<p>I <i class="fa fa-heart"></i> YOU</p>
+
+	<h1>COMING SOON</h1>
+	<p></p>
+
 </body>
 </html>
