update index and css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<title>Enrico</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i" rel="stylesheet">
 </head>
 <body>
 
-	<h1>COMING SOON</h1>
-	<p></p>
+	<h1>COMING SOON...</h1>
+	<p>For email communication, feel free to contact me at <span>enrico.7tin@gmail.com</span>.</p>
 
 </body>
 </html>
